# BeardLibrary

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: cpp_utils.h
include/Beard/: Array.h  Hash.h  HashMap.h  HashSet.h  IO.h  Macros.h  Math.h  Timer.h
include/beard/containers/: array.h  hash_map.h  hash_set.h
include/beard/core/: macros.h
include/beard/fmt/: fmt.h
include/beard/io/: io.h
include/beard/math/: math.h
include/beard/misc/: hash.h  optional.h  timer.h
src/: IO.cpp  Timer.cpp  io.cpp  timer.cpp
tests/: TestCompile.cpp
